fixed line chart overlap bug. Shoutout @vladmrnv

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,6 @@ body {
   left: 60%;
   height: 300px;
   position: absolute;
-  top: 66%;
+  top: 68%;
   margin-top: -150px;
 }
